--- a/lectures/pom.xml
+++ b/lectures/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-tree</artifactId>
+            <version>9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
