--- a/assignment/pom.xml
+++ b/assignment/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.20.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
